--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </dependencies>
 
     <build>
-        <finalName>app-name</finalName>
+        <finalName>ejb-app</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
